--- a/static/styles.css
+++ b/static/styles.css
@@ -17,7 +17,8 @@ body {
 
 /* color scheme matching logo */
 :root {
-  --ultra-primary: #4e3b50;
+  --ultra-primary: #5e4e69;
+  --ultra-highlight: #e6e4e8;
 }
 
 .navbar.is-primary {
@@ -32,6 +33,17 @@ body {
 
 .has-text-primary {
   color: var(--ultra-primary) !important;
+}
+
+.tag.is-info.is-light {
+  background-color: var(--ultra-highlight);
+  color: var(--ultra-primary);
+}
+
+.switch.is-info:checked + label,
+.switch.is-info:checked + label::before {
+  background-color: var(--ultra-primary);
+  border-color: var(--ultra-primary);
 }
 
 .card {
@@ -58,7 +70,7 @@ body {
 }
 .sku-card.selected {
   border-color: var(--ultra-primary);
-  background-color: #f5f7ff;
+  background-color: var(--ultra-highlight);
 }
 
 .target-wrap {
