--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="columns">
   <div class="column is-half mb-5">
-    <div class="card">
+    <div class="mdc-card">
       <header class="card-header">
         <p class="card-header-title">Status</p>
       </header>
@@ -23,7 +23,7 @@
     </div>
   </div>
   <div class="column is-half mb-5">
-    <div class="card">
+    <div class="mdc-card">
       <header class="card-header">
         <p class="card-header-title">SKU Summary</p>
       </header>
@@ -41,6 +41,6 @@
   </div>
 </div>
 <div class="has-text-right">
-<a href="/monthly-report" class="button is-primary">📊 View Reports</a>
+<a href="/monthly-report" class="mdc-button mdc-button--raised">📊 View Reports</a>
 </div>
 {% endblock %}
