--- a/templates/debug.html
+++ b/templates/debug.html
@@ -1,7 +1,7 @@
 
 {% extends "layout.html" %}
 {% block content %}
-<div class="card">
+<div class="mdc-card">
   <div class="card-content">
     <h2 class="title is-4">Debug Summary: Transactions by Month</h2>
     <table class="table is-fullwidth is-bordered">
