--- a/templates/report.html
+++ b/templates/report.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% block content %}
-<div class="card">
+<div class="mdc-card">
   <div class="card-content report-content">
     <h2 class="title is-4">Reports</h2>
     <form method="get" class="mb-4">
@@ -136,7 +136,7 @@
     </div> <!-- by-year -->
 
     <div class="has-text-right mt-4">
-      <button onclick="window.print()" class="button is-light">🖨️ Print Report</button>
+      <button onclick="window.print()" class="mdc-button">🖨️ Print Report</button>
     </div>
   </div>
 </div>
