--- a/templates/upload.html
+++ b/templates/upload.html
@@ -1,7 +1,7 @@
 
 {% extends "layout.html" %}
 {% block content %}
-<div class="card">
+<div class="mdc-card">
   <header class="card-header">
     <p class="card-header-title">Upload Shopify & QBO Files</p>
   </header>
@@ -19,7 +19,7 @@
           <input type="file" class="input" name="qbo">
         </div>
       </div>
-      <button type="submit" class="button is-primary">Upload</button>
+      <button type="submit" class="mdc-button mdc-button--raised">Upload</button>
     </form>
   </div>
 </div>
