--- a/templates/sku_map.html
+++ b/templates/sku_map.html
@@ -62,7 +62,7 @@
         </div>
         {% endfor %}
         <div class="buttons mb-5">
-          <button class="mdc-button" type="submit" name="merge" value="1">Merge Selected</button>
+          <button class="mdc-button mdc-button--raised" type="submit" name="merge" value="1">Merge Selected</button>
           <button class="mdc-button mdc-button--raised" type="submit" name="save" value="1">Save Changes</button>
         </div>
       </form>
@@ -87,7 +87,7 @@
           {% endfor %}
           </tbody>
         </table>
-        <button class="mdc-button" type="submit" name="merge_suggestions" value="1">Merge Selected</button>
+        <button class="mdc-button mdc-button--raised" type="submit" name="merge_suggestions" value="1">Merge Selected</button>
       </form>
       {% else %}
       <p>No suggestions available.</p>
